--- a/styles.css
+++ b/styles.css
@@ -5,20 +5,30 @@ button {
   height:100px;
   width:150px;
 }
-.container {
+section {
   width:960px;
-  min-height:1000px;
   margin:auto;
   padding:0;
   border: 2px solid white;
   text-align:center;
 }
 .block {
-  display:inline-block;
-  position:relative;
-  width:50px;
-  height:50px;
+  width:80px;
+  height:80px;
   margin:0;
   padding:0;
   /*float:left;*/
+}
+section .block {
+  display:inline-block;
+  position:relative;
+}
+table {
+  width:960px;
+  margin:auto;
+  padding:0;
+  border: 2px solid white;
+}
+table .block {
+
 }
