--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,40 @@
 body {
   background-color:black;
+  color: white;
+  float:left;
+  clear: both;
+  width:100%;
 }
 button {
   height:100px;
   width:150px;
+  font-size:1.2em;
+}
+h1 {
+
 }
 section {
   width:960px;
+  height:480px;
   margin:auto;
+  float:none;
   padding:0;
-  border: 2px solid white;
-  text-align:center;
+  border: 2px solid red;
+  clear: right;
 }
-.block {
+section .block {
   width:80px;
   height:80px;
   margin:0;
   padding:0;
-  /*float:left;*/
-}
-section .block {
-  display:inline-block;
+  float:left;
+  background-color:black;
+  /*margin-top: -5px;*/
   position:relative;
 }
 table {
   width:960px;
+  height:480px;
   margin:auto;
   padding:0;
   border: 2px solid white;
