--- a/styles.css
+++ b/styles.css
@@ -16,14 +16,16 @@ h1 {
 section {
   border: 2px solid red;
   clear: right;
-  float:none;
+  float: left;
   height:800px;
-  margin:auto;
   padding:0;
   width:800px;
+}
+div .block-container {
+  float:left;
   
 }
-section .block {
+div .block {
   background-color:black;
   float:left;
   height:80px;
