--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color:black;
+  border-collapse: collapse;
   clear: both;
   color: white;
   float:left;
@@ -42,10 +43,15 @@ div.block {
 }
 table {
   border: 2px solid white;
-  height:600px;
+  height: 400px;
   margin:auto;
   padding:0;
-  width:600px;
+  width: 400px;
+}
+td, tr {
+  border-collapse: collapse;
+  padding: 0;
+  margin: 0;
 }
 table .block {
 
